--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -904,27 +904,29 @@
                             </label>
                             <div class="col-lg-9">
                                 <select #domicilio_retiro="ngModel"  [(ngModel)]="entrega.domicilio" name="domicilio_retiro" class="form-control m-input" (change)="domicilioValue(domicilio_retiro.value)">
-                                    <option value= "1">Domicilio</option>
-                                    <option value= "0">Retiro</option>
+                                    <option value= "1">DOMICILIO</option>
+                                    <option value= "0">RETIRO PUNTO TRAMACO</option>
+                                    <option value= "2">RETIRO MATRIZ</option>
                                 </select>
                             </div>
                            
                         </div>
-                        <div class="form-group m-form__group row" *ngIf= "entrega.domicilio == 0">
+                        <div class="form-group m-form__group row" *ngIf= "entrega.domicilio == 0 || domicilio == 2">
                             <label class="col-lg-3 col-form-label">
                                 <h5 >Dónde se retira:</h5>  
                             </label>
     
                         </div>
                         
-                        <div class="form-group m-form__group row" *ngIf= "entrega.domicilio == 0">
+                        <div class="form-group m-form__group row" *ngIf= "entrega.domicilio == 0 || domicilio == 2">
                              <label class="col-lg-3 col-form-label">
                                 País:
                             </label>
                             <div class="col-lg-3">
                                 
                                 <select  class="form-control m-input" placeholder="País" (change)="getProvinciasR(pais_id.value)"
-                                        [(ngModel)]="entrega.ciudad_retiro.provincia.pais.id" #pais_id="ngModel" name="pais_id">
+                                        [(ngModel)]="entrega.ciudad_retiro.provincia.pais.id" #pais_id="ngModel" name="pais_id"
+                                        disabled={{disabled}}>
                                     <option [value]="" disabled>Seleccione un País</option>
                                     <option *ngFor="let pais of paisesEntrega" [value]="pais.id" >
                                         {{pais.nombre}}
@@ -937,7 +939,7 @@
                             <div class="col-lg-3">
                                 <app-auto-complete *ngIf="provinciasR" placeholder="Seleccione"
                                 [(ngModel)]="entrega.ciudad_retiro.provincia.id" #provinciaRetiro_id="ngModel"
-                                name="provinciaRetiro_id" required [items]="provinciasR"
+                                name="provinciaRetiro_id" required [items]="provinciasR" [disabled]="disabled"
                                 [textField]="'nombre'"
                                 valueField="id"
                                 (change)="getCiudadesR(provinciaRetiro_id.value)"
@@ -945,25 +947,25 @@
                             
                             </div>
                         </div>
-                        <div class="form-group m-form__group row" *ngIf= "entrega.domicilio == 0">
+                        <div class="form-group m-form__group row" *ngIf= "entrega.domicilio == 0 || domicilio == 2">
                             <label class="col-lg-3 col-form-label">
                                 Ciudad:
                             </label>
                             <div class="col-lg-4">
                                 <app-auto-complete *ngIf="ciudadesR" placeholder="Seleccione"
                                 [(ngModel)]="entrega.ciudad_retiro.id" #ciudadRetiro_id="ngModel"
-                                name="ciudadRetiro_id" required [items]="ciudadesR"
+                                name="ciudadRetiro_id" required [items]="ciudadesR" [disabled]="disabled"
                                 [textField]="'nombre'"
                                 valueField="id"
                                  ></app-auto-complete>
                             
                             </div>
                             <div class="col-lg-5">
-                                <input type="text" class="form-control m-input" placeholder="Ciudad"
+                                <input type="text" class="form-control m-input" placeholder="Ciudad Manual" disabled={{disabled}}
                                 [ngModel]="entrega.ciudad_retiro_text" #ciudadretirotext="ngModel" name="ciudadretirotext">
                             </div>
                         </div>
-                        <div class="form-group m-form__group row" *ngIf= "entrega.domicilio == 0">
+                        <div class="form-group m-form__group row" *ngIf= "entrega.domicilio == 0 || domicilio == 2">
                             <label class="col-lg-3 col-form-label">
                                 Otra Información:
                             </label>
@@ -976,7 +978,7 @@
                         </div>
                         <div class="form-group m-form__group row">
                             <div class="col-lg-9">
-                                <h5 *ngIf= "entrega.domicilio == 0">Datos de la persona que retira:</h5> 
+                                <h5 *ngIf= "entrega.domicilio == 0 || domicilio == 2">Datos de la persona que retira:</h5> 
                                 <h5 *ngIf= "entrega.domicilio == 1">Datos del domicilio:</h5> 
                             </div>
                         </div>
@@ -1007,6 +1009,7 @@
                                                     textField1="nombre"
                                                     textField2="apellido"
                                                     valueField="numero_identidad"
+                                                    (change)="getDireccion(usuario_retiro.value)"
                                 ></app-auto-complete>
                             </div>
                            
@@ -1036,13 +1039,13 @@
                                 </section>
                             </div>
                         </div>
-                        <div class="form-group m-form__group row" *ngIf="selectUsuario == 0">
+                        <div class="form-group m-form__group row" *ngIf="(disabledDir && domicilio == 1) || (selectUsuario == 0)">
                             <label class="col-lg-3 col-form-label">
                                 Cédula:
                             </label>
                             <div class="col-lg-3">
                                 <input type="text" class="form-control m-input" placeholder="Cédula"
-                                       [ngModel]="entrega.cedula" #cedula="ngModel"
+                                       [ngModel]="entrega.cedula" #cedula="ngModel" disabled={{disabledDir}}
                                        name="cedula" required>
                                 <section *ngIf="cedula.invalid && cedula.dirty" class="bs">
                                 <p class="m--font-danger" *ngIf="cedula.hasError('required')">La cédula es
@@ -1054,7 +1057,7 @@
                             </label>
                             <div class="col-lg-3">
                                 <input type="text" class="form-control m-input" placeholder="Celular"
-                                       [ngModel]="entrega.celular" #celular="ngModel"
+                                       [ngModel]="entrega.celular" #celular="ngModel" disabled={{disabledDir}}
                                        name="celular" required>
                                 <section *ngIf="celular.invalid && celular.dirty" class="bs">
                                 <p class="m--font-danger" *ngIf="celular.hasError('required')">El celular es
@@ -1062,13 +1065,13 @@
                                 </section>
                             </div>
                         </div>
-                        <div class="form-group m-form__group row" *ngIf="selectUsuario == 0 && entrega.domicilio == 1">
+                        <div class="form-group m-form__group row" *ngIf="(disabledDir && domicilio == 1) || (selectUsuario == 0 && domicilio == 1)">
                                 <label class="col-lg-3 col-form-label">
                                     Dirección:
                                 </label>
                                 <div class="col-lg-9">
                                     <input type="text" class="form-control m-input" placeholder="Dirección"
-                                    [ngModel]="entrega.direccion" #direccion="ngModel"
+                                    [ngModel]="entrega.direccion" #direccion="ngModel" disabled={{disabledDir}}
                                     name="direccion" required>
                                     <section *ngIf="direccion.invalid && direccion.dirty" class="bs">
                                     <p class="m--font-danger" *ngIf="direccion.hasError('required')">La dirección es
@@ -1077,13 +1080,13 @@
                                 </div>
                             
                         </div>
-                        <div class="form-group m-form__group row" *ngIf="selectUsuario == 0 && entrega.domicilio == 1">
+                        <div class="form-group m-form__group row" *ngIf="(disabledDir && domicilio == 1) || (selectUsuario == 0 && domicilio == 1)">
                             <label class="col-lg-3 col-form-label">
                                 País:
                             </label>
                             <div class="col-lg-3">
                                 <select  class="form-control m-input" placeholder="País" (change)="getProvincias(pais_id.value)"
-                                        [(ngModel)]="entrega.ciudad.provincia.pais.id" #pais_id="ngModel" name="pais_id" required>
+                                        [(ngModel)]="entrega.ciudad.provincia.pais.id" #pais_id="ngModel" disabled={{disabledDir}} name="pais_id" required>
                                     <option [value]="" disabled>Seleccione un País</option>
                                     <option *ngFor="let pais of paisesEntrega" [value]="pais.id" >
                                         {{pais.nombre}}
@@ -1098,12 +1101,12 @@
                                 [(ngModel)]="entrega.ciudad.provincia.id" #provincia_id="ngModel"
                                 name="provincia_id" required [items]="provincias"
                                 (change)="getCiudades(provincia_id.value)"
-                                [textField]="'nombre'"
+                                [textField]="'nombre'" [disabled]="disabledDir"
                                 valueField="id"
                                  ></app-auto-complete>
                             </div>
                         </div>
-                        <div class="form-group m-form__group row" *ngIf="selectUsuario == 0 && entrega.domicilio == 1">
+                        <div class="form-group m-form__group row" *ngIf="(disabledDir && domicilio == 1) || (selectUsuario == 0 && domicilio == 1)">
                             <label class="col-lg-3 col-form-label">
                                 Ciudad:
                             </label>
@@ -1111,7 +1114,7 @@
                                 <app-auto-complete *ngIf="ciudades" placeholder="Seleccione"
                                 [(ngModel)]="entrega.ciudad.id" #ciudad_id="ngModel"
                                 name="ciudad_id" required [items]="ciudades"
-                                [textField]="'nombre'"
+                                [textField]="'nombre'" [disabled]="disabledDir"
                                 valueField="id"
                                  ></app-auto-complete>
                               
@@ -1121,7 +1124,7 @@
                             </label>
                             <div class="col-lg-3">
                                 <input type="text" class="form-control m-input" placeholder="Código Postal"
-                                [ngModel]="entrega.codigo_postal" #codigoPostal="ngModel"
+                                [ngModel]="entrega.codigo_postal" #codigoPostal="ngModel" disabled={{disabledDir}}
                                 name="codigoPostal" required>
                                 <section *ngIf="codigoPostal.invalid && codigoPostal.dirty" class="bs">
                                 <p class="m--font-danger" *ngIf="codigoPostal.hasError('required')">El código postal es
@@ -1180,15 +1183,20 @@
                         </th>
                         <th>
                             Peso(Lb)
-                        </th>
-                        <th>
-                            Dimensiones(In)
+                            <div style="float: right;">
+                                <input type="radio" class="radio-inline" id="Kg" name="tipopeso" value="1" [(ngModel)]="tpeso" #tipopeso="ngModel" required [checked]="tipopeso.value==1" (change)="onConversion(entrega.articulos)" > <label for="Kg" ><span></span>Kg</label>
+                            
+                                <input type="radio" class="radio-inline" id="lb" name="tipopeso" value="0"  [(ngModel)]="tpeso" #tipopeso="ngModel" required [checked]="tipopeso.value==0" (change)="onConversion(entrega.articulos)" > <label for="lb" ><span></span>Lb</label>      
+                            </div>
                         </th>
                         <th>
                             Costo(USD)
                         </th>
                         <th>
                             Piezas
+                        </th>
+                        <th>
+                            Dimensiones(In)
                         </th>
                         <th>Descripción </th>
                         <th>
@@ -1214,14 +1222,15 @@
                         <td>
                             {{ articulo.peso | number:'1.2-2' }}
                         </td>
-                        <td>
-                            {{ articulo.largo }}x{{articulo.ancho}}x{{articulo.alto}}
-                        </td>
+                       
                         <td>
                             {{ articulo.precio }}
                         </td>
                         <td>
                             {{ articulo.piezas }}
+                        </td>
+                        <td>
+                            {{ articulo.largo }}x{{articulo.ancho}}x{{articulo.alto}}
                         </td>
                        <!--  <td>
                             <span class="m-list-settings__item-control">
@@ -1235,6 +1244,14 @@
                             {{ articulo.estado }}
                         </td> 
                         
+                    </tr>
+                    <tr style="font-weight: bold;">
+                        <td colspan="3" style="text-align: center;">TOTAL</td>
+                        <td>{{ totalPesoEnt | number:'1.2-2' }}</td>
+                        <td>{{ totalPrecioEnt }}</td>
+                        <td>{{ totalPiezas }}</td>
+                        
+                        <td colspan="3" ></td>
                     </tr>
                     </tbody>
                 </table>
